Ticket #11700 (closed defect: fixed)

Opened 3 years ago

Last modified 3 years ago

wxX11-2.8.11-rc1 fails to build

Reported by: dghart Owned by:
Priority: normal Milestone: 2.8.11
Component: wxX11 Version:
Keywords: wxX11 GetRawData Cc:
Blocked By: Patch: no
Blocking:

Description

Building wxX11-2.8.11-rc1 on debian lenny after a standard configure:
../configure --with-x11 --disable-shared
fails with the following errors:

/home/david/devel/wxX11-2.8.11-rc1/rel/bk-deps g++ -c -o corelib_graphicc.o -I./.pch/wxprec_corelib -DWXX11 -DWXUNIVERSAL -DWXBUILDING -DwxUSE_BASE=0 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -I/home/david/devel/wxX11-2.8.11-rc1/rel/lib/wx/include/x11univ-ansi-release-static-2.8 -I../include -DWX_PRECOMP -pthread -Wall -Wundef -Wno-ctor-dtor-privacy -O2 -fno-strict-aliasing ../src/generic/graphicc.cpp
In file included from ../src/generic/graphicc.cpp:40:
../include/wx/rawbmp.h: In constructor ‘wxPixelDataOut<wxBitmap>::wxPixelDataIn<Format>::Iterator::Iterator(wxBitmap&, wxPixelDataOut<wxBitmap>::wxPixelDataIn<Format>&)’:
../include/wx/rawbmp.h:520: error: ‘class wxBitmap’ has no member named ‘GetRawData’
../include/wx/rawbmp.h: In destructor ‘wxPixelDataOut<wxBitmap>::wxPixelDataIn<Format>::~wxPixelDataIn()’:
../include/wx/rawbmp.h:634: error: ‘class wxBitmap’ has no member named ‘UngetRawData’
../include/wx/rawbmp.h: In member function ‘void wxPixelDataOut<wxBitmap>::wxPixelDataIn<Format>::UseAlpha()’:
../include/wx/rawbmp.h:638: error: ‘class wxBitmap’ has no member named ‘UseAlpha’
../include/wx/rawbmp.h: At global scope:
../include/wx/rawbmp.h:686: error: ‘wxNativePixelFormat’ was not declared in this scope
../include/wx/rawbmp.h:686: error: template argument 2 is invalid
../include/wx/rawbmp.h:686: error: invalid type in declaration before ‘;’ token
../include/wx/rawbmp.h:687: error: ‘wxAlphaPixelFormat’ was not declared in this scope
../include/wx/rawbmp.h:687: error: template argument 2 is invalid
../include/wx/rawbmp.h:687: error: invalid type in declaration before ‘;’ token

Change History

Changed 3 years ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [63405]) Don't include wx/rawbmp.h unnecessary from src/generic/graphicc.cpp.

This is not only unneeded but also breaks wxX11 (and probably other ports)
compilation because raw bitmap access is not available there.

Closes #11700.

Note: See TracTickets for help on using tickets.