Don't include wx/rawbmp.h unnecessary from src/generic/graphicc.cpp.

This is not only unneeded but also breaks wxX11 (and probably other ports)
compilation because raw bitmap access is not available there.

Closes #11700.


git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_8_BRANCH@63405 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775